minigpu_ffi/src/include/minigpu_external.h


struct MGPUComputeShader;

struct MGPUBuffer;
typedef struct MGPUComputeShader MGPUComputeShader;

typedef struct MGPUBuffer MGPUBuffer;

/* -------------------------------------------------------------------------
 * Enums
 * ---------------------------------------------------------------------- */

/** Describes the origin / handle type of the external buffer. */
typedef enum {
    MGPU_EXTERNAL_CONTENT_TYPE_CPU = 0,
    /**< CPU-accessible pixel data. Uploaded via wgpuQueueWriteTexture.
         All platforms. */
    MGPU_EXTERNAL_CONTENT_TYPE_D3D11_SHARED_HANDLE,
    /**< Windows: planes[0].data_ptr is a Windows NT HANDLE obtained from
         IDXGIResource1::CreateSharedHandle. Must be opened with
         GENERIC_ALL access. Minigpu will DuplicateHandle internally. */
    MGPU_EXTERNAL_CONTENT_TYPE_METAL_IOSURFACE,
    /**< macOS/iOS: planes[0].data_ptr is an IOSurfaceRef (retained).
         Minigpu imports via wgpuDeviceImportSharedTextureMemory with
         WGPUSType_SharedTextureMemoryIOSurfaceDescriptor. */
    MGPU_EXTERNAL_CONTENT_TYPE_DMABUF,
    /**< Linux: each plane has a dmabuf_fd, stride_bytes, offset_bytes, and
         drm_format_modifier. Minigpu imports via
         WGPUSType_SharedTextureMemoryDmaBufDescriptor. */
    MGPU_EXTERNAL_CONTENT_TYPE_AHARDWAREBUFFER,
    /**< Android: planes[0].data_ptr is an AHardwareBuffer* (reference held
         by caller until mgpuDestroyVideoTexture). */
    MGPU_EXTERNAL_CONTENT_TYPE_WEB_VIDEO_FRAME,
    /**< Web only (Emscripten build): planes[0].data_ptr is a JS VideoFrame
         object handle. Imported via device.importExternalTexture(). */
} MGPUExternalContentType;


/** Pixel format as seen by the external producer.
 *  Subset of MiniAVPixelFormat that Minigpu can consume efficiently. */
typedef enum {
    MGPU_EXTERNAL_PIXEL_FORMAT_UNKNOWN = 0,
    MGPU_EXTERNAL_PIXEL_FORMAT_RGBA32,          /**< Rgba8Unorm  */
    MGPU_EXTERNAL_PIXEL_FORMAT_BGRA32,          /**< Bgra8Unorm  */
    MGPU_EXTERNAL_PIXEL_FORMAT_NV12,            /**< R8Unorm (Y) + Rg8Unorm (UV) */
    MGPU_EXTERNAL_PIXEL_FORMAT_GRAY8,           /**< R8Unorm     */
    MGPU_EXTERNAL_PIXEL_FORMAT_RGBA64_HALF,     /**< Rgba16Float */
    MGPU_EXTERNAL_PIXEL_FORMAT_YUV420P_AS_NV12_PLANES,
    /**< I420 with app-interleaved UV → same import path as NV12 */
    MGPU_EXTERNAL_PIXEL_FORMAT_YUV420P_AS_RGB_PLANES,
    /**< I420/YV12 as three separate R8Unorm textures (Y, U, V) */
} MGPUExternalPixelFormat;


/* -------------------------------------------------------------------------
 * Structures
 * ---------------------------------------------------------------------- */

/** Per-plane descriptor for an external video buffer. */
typedef struct {
    void    *data_ptr;          /**< CPU: pixel data ptr.
                                     D3D11: NT HANDLE (cast to void*).
                                     Metal: IOSurfaceRef or id<MTLTexture>.
                                     DMA-BUF: legacy cast of dmabuf_fd.
                                     AHB: AHardwareBuffer*.
                                     Web: unused (0). */
    uint32_t width;             /**< Plane width in pixels. */
    uint32_t height;            /**< Plane height in pixels. */
    uint32_t stride_bytes;      /**< Row stride in bytes. */
    uint32_t offset_bytes;      /**< Byte offset within the shared resource. */
    uint32_t subresource_index; /**< D3D11 subresource / Vulkan aspect index. */
    /* Linux DMA-BUF specific (ignored on other platforms) */
    int      dmabuf_fd;         /**< Per-plane DMA-BUF fd (-1 if not DMA-BUF). */
    uint64_t drm_format_modifier; /**< DRM modifier (0 = DRM_FORMAT_MOD_LINEAR). */
} MGPUExternalPlane;


/** Optional GPU synchronisation fence.
 *  Zero-initialise if the producer has already waited (e.g. CPU copy). */
typedef struct {
    int      sync_fd;             /**< Linux/Android: sync_file fd. -1 = none. */
    void    *d3d11_fence;         /**< Windows: ID3D11Fence*. NULL = none.     */
    void    *metal_shared_event;  /**< macOS/iOS: id<MTLSharedEvent> (bridged).
                                       NULL = none.                             */
    uint64_t metal_fence_value;   /**< Signal value for metal_shared_event.    */
} MGPUExternalFence;


/** Full descriptor of an external video frame to be imported into Minigpu. */
typedef struct {
    MGPUExternalContentType content_type;   /**< Handle / memory type.        */
    MGPUExternalPixelFormat pixel_format;   /**< Pixel format of the frame.   */
    uint32_t                width;          /**< Total frame width in pixels.  */
    uint32_t                height;         /**< Total frame height in pixels. */
    uint32_t                num_planes;     /**< Number of valid entries in planes[]. */
    MGPUExternalPlane       planes[4];      /**< Per-plane descriptors.        */
    MGPUExternalFence       fence;          /**< Optional GPU fence.           */
    int64_t                 timestamp_us;   /**< Frame timestamp (microseconds). */
} MGPUExternalVideoBuffer;