minigpu_ffi/lib/minigpu_ffi_bindings.dart


@ffi.Native<
    ffi.Void Function(ffi.Pointer<MGPUBuffer>, ffi.Pointer<ffi.Int16>, ffi.Size,
        ffi.Size, MGPUCallback)>()
external void mgpuReadAsyncInt16(
  ffi.Pointer<MGPUBuffer> buffer,
  ffi.Pointer<ffi.Int16> outputData,
  int size,
  int offset,
  MGPUCallback callback,
);

@ffi.Native<
    ffi.Void Function(ffi.Pointer<MGPUBuffer>, ffi.Pointer<ffi.Int32>, ffi.Size,
        ffi.Size, MGPUCallback)>()
external void mgpuReadAsyncInt32(
  ffi.Pointer<MGPUBuffer> buffer,
  ffi.Pointer<ffi.Int32> outputData,
  int size,
  int offset,
  MGPUCallback callback,
);

@ffi.Native<
    ffi.Void Function(ffi.Pointer<MGPUBuffer>, ffi.Pointer<ffi.Int64>, ffi.Size,
        ffi.Size, MGPUCallback)>()
external void mgpuReadAsyncInt64(
  ffi.Pointer<MGPUBuffer> buffer,
  ffi.Pointer<ffi.Int64> outputData,
  int size,
  int offset,
  MGPUCallback callback,
);

@ffi.Native<
    ffi.Void Function(ffi.Pointer<MGPUBuffer>, ffi.Pointer<ffi.Uint8>, ffi.Size,
        ffi.Size, MGPUCallback)>()
external void mgpuReadAsyncUint8(
  ffi.Pointer<MGPUBuffer> buffer,
  ffi.Pointer<ffi.Uint8> outputData,
  int size,
  int offset,
  MGPUCallback callback,
);

@ffi.Native<
    ffi.Void Function(ffi.Pointer<MGPUBuffer>, ffi.Pointer<ffi.Uint16>,
        ffi.Size, ffi.Size, MGPUCallback)>()
external void mgpuReadAsyncUint16(
  ffi.Pointer<MGPUBuffer> buffer,
  ffi.Pointer<ffi.Uint16> outputData,
  int size,
  int offset,
  MGPUCallback callback,
);

@ffi.Native<
    ffi.Void Function(ffi.Pointer<MGPUBuffer>, ffi.Pointer<ffi.Uint32>,
        ffi.Size, ffi.Size, MGPUCallback)>()
external void mgpuReadAsyncUint32(
  ffi.Pointer<MGPUBuffer> buffer,
  ffi.Pointer<ffi.Uint32> outputData,
  int size,
  int offset,
  MGPUCallback callback,
);

@ffi.Native<
    ffi.Void Function(ffi.Pointer<MGPUBuffer>, ffi.Pointer<ffi.Uint64>,
        ffi.Size, ffi.Size, MGPUCallback)>()
external void mgpuReadAsyncUint64(
  ffi.Pointer<MGPUBuffer> buffer,
  ffi.Pointer<ffi.Uint64> outputData,
  int size,
  int offset,
  MGPUCallback callback,
);

@ffi.Native<
    ffi.Void Function(ffi.Pointer<MGPUBuffer>, ffi.Pointer<ffi.Float>, ffi.Size,
        ffi.Size, MGPUCallback)>()
external void mgpuReadAsyncFloat(
  ffi.Pointer<MGPUBuffer> buffer,
  ffi.Pointer<ffi.Float> outputData,
  int size,
  int offset,
  MGPUCallback callback,
);

@ffi.Native<
    ffi.Void Function(ffi.Pointer<MGPUBuffer>, ffi.Pointer<ffi.Double>,
        ffi.Size, ffi.Size, MGPUCallback)>()
external void mgpuReadAsyncDouble(
  ffi.Pointer<MGPUBuffer> buffer,
  ffi.Pointer<ffi.Double> outputData,
  int size,
  int offset,
  MGPUCallback callback,
);

@ffi.Native<
    ffi.Void Function(
        ffi.Pointer<MGPUBuffer>, ffi.Pointer<ffi.Void>, ffi.Size, ffi.Size)>()
external void mgpuReadSync(
  ffi.Pointer<MGPUBuffer> buffer,
  ffi.Pointer<ffi.Void> outputData,
  int size,
  int offset,
);

@ffi.Native<
    ffi.Void Function(
        ffi.Pointer<MGPUBuffer>, ffi.Pointer<ffi.Int8>, ffi.Size, ffi.Size)>()
external void mgpuReadSyncInt8(
  ffi.Pointer<MGPUBuffer> buffer,
  ffi.Pointer<ffi.Int8> outputData,
  int elementCount,
  int elementOffset,
);

@ffi.Native<
    ffi.Void Function(
        ffi.Pointer<MGPUBuffer>, ffi.Pointer<ffi.Uint8>, ffi.Size, ffi.Size)>()
external void mgpuReadSyncUint8(
  ffi.Pointer<MGPUBuffer> buffer,
  ffi.Pointer<ffi.Uint8> outputData,
  int elementCount,
  int elementOffset,
);

@ffi.Native<
    ffi.Void Function(
        ffi.Pointer<MGPUBuffer>, ffi.Pointer<ffi.Int16>, ffi.Size, ffi.Size)>()
external void mgpuReadSyncInt16(
  ffi.Pointer<MGPUBuffer> buffer,
  ffi.Pointer<ffi.Int16> outputData,
  int elementCount,
  int elementOffset,
);

@ffi.Native<
    ffi.Void Function(
        ffi.Pointer<MGPUBuffer>, ffi.Pointer<ffi.Uint16>, ffi.Size, ffi.Size)>()
external void mgpuReadSyncUint16(
  ffi.Pointer<MGPUBuffer> buffer,
  ffi.Pointer<ffi.Uint16> outputData,
  int elementCount,
  int elementOffset,
);

@ffi.Native<
    ffi.Void Function(
        ffi.Pointer<MGPUBuffer>, ffi.Pointer<ffi.Int32>, ffi.Size, ffi.Size)>()
external void mgpuReadSyncInt32(
  ffi.Pointer<MGPUBuffer> buffer,
  ffi.Pointer<ffi.Int32> outputData,
  int elementCount,
  int elementOffset,
);

@ffi.Native<
    ffi.Void Function(
        ffi.Pointer<MGPUBuffer>, ffi.Pointer<ffi.Uint32>, ffi.Size, ffi.Size)>()
external void mgpuReadSyncUint32(
  ffi.Pointer<MGPUBuffer> buffer,
  ffi.Pointer<ffi.Uint32> outputData,
  int elementCount,
  int elementOffset,
);

@ffi.Native<
    ffi.Void Function(
        ffi.Pointer<MGPUBuffer>, ffi.Pointer<ffi.Int64>, ffi.Size, ffi.Size)>()
external void mgpuReadSyncInt64(
  ffi.Pointer<MGPUBuffer> buffer,
  ffi.Pointer<ffi.Int64> outputData,
  int elementCount,
  int elementOffset,
);

@ffi.Native<
    ffi.Void Function(
        ffi.Pointer<MGPUBuffer>, ffi.Pointer<ffi.Uint64>, ffi.Size, ffi.Size)>()
external void mgpuReadSyncUint64(
  ffi.Pointer<MGPUBuffer> buffer,
  ffi.Pointer<ffi.Uint64> outputData,
  int elementCount,
  int elementOffset,
);

@ffi.Native<
    ffi.Void Function(
        ffi.Pointer<MGPUBuffer>, ffi.Pointer<ffi.Float>, ffi.Size, ffi.Size)>()
external void mgpuReadSyncFloat32(
  ffi.Pointer<MGPUBuffer> buffer,
  ffi.Pointer<ffi.Float> outputData,
  int elementCount,
  int elementOffset,
);

@ffi.Native<
    ffi.Void Function(
        ffi.Pointer<MGPUBuffer>, ffi.Pointer<ffi.Double>, ffi.Size, ffi.Size)>()
external void mgpuReadSyncFloat64(
  ffi.Pointer<MGPUBuffer> buffer,
  ffi.Pointer<ffi.Double> outputData,
  int elementCount,
  int elementOffset,
);

@ffi.Native<
    ffi.Void Function(
        ffi.Pointer<MGPUBuffer>, ffi.Pointer<ffi.Int8>, ffi.Size)>()
external void mgpuWriteInt8(
  ffi.Pointer<MGPUBuffer> buffer,
  ffi.Pointer<ffi.Int8> inputData,
  int byteSize,
);

@ffi.Native<
    ffi.Void Function(
        ffi.Pointer<MGPUBuffer>, ffi.Pointer<ffi.Int16>, ffi.Size)>()
external void mgpuWriteInt16(
  ffi.Pointer<MGPUBuffer> buffer,
  ffi.Pointer<ffi.Int16> inputData,
  int byteSize,
);

@ffi.Native<
    ffi.Void Function(
        ffi.Pointer<MGPUBuffer>, ffi.Pointer<ffi.Int32>, ffi.Size)>()
external void mgpuWriteInt32(
  ffi.Pointer<MGPUBuffer> buffer,
  ffi.Pointer<ffi.Int32> inputData,
  int byteSize,
);

@ffi.Native<
    ffi.Void Function(
        ffi.Pointer<MGPUBuffer>, ffi.Pointer<ffi.Int64>, ffi.Size)>()
external void mgpuWriteInt64(
  ffi.Pointer<MGPUBuffer> buffer,
  ffi.Pointer<ffi.Int64> inputData,
  int byteSize,
);

@ffi.Native<
    ffi.Void Function(
        ffi.Pointer<MGPUBuffer>, ffi.Pointer<ffi.Uint8>, ffi.Size)>()
external void mgpuWriteUint8(
  ffi.Pointer<MGPUBuffer> buffer,
  ffi.Pointer<ffi.Uint8> inputData,
  int byteSize,
);

@ffi.Native<
    ffi.Void Function(
        ffi.Pointer<MGPUBuffer>, ffi.Pointer<ffi.Uint16>, ffi.Size)>()
external void mgpuWriteUint16(
  ffi.Pointer<MGPUBuffer> buffer,
  ffi.Pointer<ffi.Uint16> inputData,
  int byteSize,
);

@ffi.Native<
    ffi.Void Function(
        ffi.Pointer<MGPUBuffer>, ffi.Pointer<ffi.Uint32>, ffi.Size)>()
external void mgpuWriteUint32(
  ffi.Pointer<MGPUBuffer> buffer,
  ffi.Pointer<ffi.Uint32> inputData,
  int byteSize,
);

@ffi.Native<
    ffi.Void Function(
        ffi.Pointer<MGPUBuffer>, ffi.Pointer<ffi.Uint64>, ffi.Size)>()
external void mgpuWriteUint64(
  ffi.Pointer<MGPUBuffer> buffer,
  ffi.Pointer<ffi.Uint64> inputData,
  int byteSize,
);

@ffi.Native<
    ffi.Void Function(
        ffi.Pointer<MGPUBuffer>, ffi.Pointer<ffi.Float>, ffi.Size)>()
external void mgpuWriteFloat(
  ffi.Pointer<MGPUBuffer> buffer,
  ffi.Pointer<ffi.Float> inputData,
  int byteSize,
);

@ffi.Native<
    ffi.Void Function(
        ffi.Pointer<MGPUBuffer>, ffi.Pointer<ffi.Double>, ffi.Size)>()
external void mgpuWriteDouble(
  ffi.Pointer<MGPUBuffer> buffer,
  ffi.Pointer<ffi.Double> inputData,
  int byteSize,
);

@ffi.Native<ffi.Int64 Function()>()
external int mgpuQueryVramBytes();

final class MGPUComputeShader extends ffi.Opaque {}

final class MGPUBuffer extends ffi.Opaque {}

/// Describes the origin / handle type of the external buffer.
enum MGPUExternalContentType {
  MGPU_EXTERNAL_CONTENT_TYPE_CPU(0),
  MGPU_EXTERNAL_CONTENT_TYPE_D3D11_SHARED_HANDLE(1),
  MGPU_EXTERNAL_CONTENT_TYPE_METAL_IOSURFACE(2),
  MGPU_EXTERNAL_CONTENT_TYPE_DMABUF(3),
  MGPU_EXTERNAL_CONTENT_TYPE_AHARDWAREBUFFER(4),
  MGPU_EXTERNAL_CONTENT_TYPE_WEB_VIDEO_FRAME(5);

  final int value;
  const MGPUExternalContentType(this.value);

  static MGPUExternalContentType fromValue(int value) => switch (value) {
        0 => MGPU_EXTERNAL_CONTENT_TYPE_CPU,
        1 => MGPU_EXTERNAL_CONTENT_TYPE_D3D11_SHARED_HANDLE,
        2 => MGPU_EXTERNAL_CONTENT_TYPE_METAL_IOSURFACE,
        3 => MGPU_EXTERNAL_CONTENT_TYPE_DMABUF,
        4 => MGPU_EXTERNAL_CONTENT_TYPE_AHARDWAREBUFFER,
        5 => MGPU_EXTERNAL_CONTENT_TYPE_WEB_VIDEO_FRAME,
        _ => throw ArgumentError(
            'Unknown value for MGPUExternalContentType: $value'),
      };
}

/// Pixel format as seen by the external producer.
/// Subset of MiniAVPixelFormat that Minigpu can consume efficiently.
enum MGPUExternalPixelFormat {
  MGPU_EXTERNAL_PIXEL_FORMAT_UNKNOWN(0),

  /// < Rgba8Unorm
  MGPU_EXTERNAL_PIXEL_FORMAT_RGBA32(1),

  /// < Bgra8Unorm
  MGPU_EXTERNAL_PIXEL_FORMAT_BGRA32(2),

  /// < R8Unorm (Y) + Rg8Unorm (UV)
  MGPU_EXTERNAL_PIXEL_FORMAT_NV12(3),

  /// < R8Unorm
  MGPU_EXTERNAL_PIXEL_FORMAT_GRAY8(4),

  /// < Rgba16Float
  MGPU_EXTERNAL_PIXEL_FORMAT_RGBA64_HALF(5),
  MGPU_EXTERNAL_PIXEL_FORMAT_YUV420P_AS_NV12_PLANES(6),
  MGPU_EXTERNAL_PIXEL_FORMAT_YUV420P_AS_RGB_PLANES(7);

  final int value;
  const MGPUExternalPixelFormat(this.value);

  static MGPUExternalPixelFormat fromValue(int value) => switch (value) {
        0 => MGPU_EXTERNAL_PIXEL_FORMAT_UNKNOWN,
        1 => MGPU_EXTERNAL_PIXEL_FORMAT_RGBA32,
        2 => MGPU_EXTERNAL_PIXEL_FORMAT_BGRA32,
        3 => MGPU_EXTERNAL_PIXEL_FORMAT_NV12,
        4 => MGPU_EXTERNAL_PIXEL_FORMAT_GRAY8,
        5 => MGPU_EXTERNAL_PIXEL_FORMAT_RGBA64_HALF,
        6 => MGPU_EXTERNAL_PIXEL_FORMAT_YUV420P_AS_NV12_PLANES,
        7 => MGPU_EXTERNAL_PIXEL_FORMAT_YUV420P_AS_RGB_PLANES,
        _ => throw ArgumentError(
            'Unknown value for MGPUExternalPixelFormat: $value'),
      };
}

/// Per-plane descriptor for an external video buffer.
final class MGPUExternalPlane extends ffi.Struct {
  /// < CPU: pixel data ptr.
  /// D3D11: NT HANDLE (cast to void*).
  /// Metal: IOSurfaceRef or id<MTLTexture>.
  /// DMA-BUF: legacy cast of dmabuf_fd.
  /// AHB: AHardwareBuffer*.
  /// Web: unused (0).
  external ffi.Pointer<ffi.Void> data_ptr;

  /// < Plane width in pixels.
  @ffi.Uint32()
  external int width;

  /// < Plane height in pixels.
  @ffi.Uint32()
  external int height;

  /// < Row stride in bytes.
  @ffi.Uint32()
  external int stride_bytes;

  /// < Byte offset within the shared resource.
  @ffi.Uint32()
  external int offset_bytes;

  /// < D3D11 subresource / Vulkan aspect index.
  @ffi.Uint32()
  external int subresource_index;

  /// < Per-plane DMA-BUF fd (-1 if not DMA-BUF).
  @ffi.Int()
  external int dmabuf_fd;

  /// < DRM modifier (0 = DRM_FORMAT_MOD_LINEAR).
  @ffi.Uint64()
  external int drm_format_modifier;
}

/// Optional GPU synchronisation fence.
/// Zero-initialise if the producer has already waited (e.g. CPU copy).
final class MGPUExternalFence extends ffi.Struct {
  /// < Linux/Android: sync_file fd. -1 = none.
  @ffi.Int()
  external int sync_fd;

  /// < Windows: ID3D11Fence*. NULL = none.
  external ffi.Pointer<ffi.Void> d3d11_fence;

  /// < macOS/iOS: id<MTLSharedEvent> (bridged).
  /// NULL = none.
  external ffi.Pointer<ffi.Void> metal_shared_event;

  /// < Signal value for metal_shared_event.
  @ffi.Uint64()
  external int metal_fence_value;
}

/// Full descriptor of an external video frame to be imported into Minigpu.
final class MGPUExternalVideoBuffer extends ffi.Struct {
  /// < Handle / memory type.
  @ffi.UnsignedInt()
  external int content_typeAsInt;
